--- a/SourceCode/CardIdleRemastered/Properties/Settings.settings
+++ b/SourceCode/CardIdleRemastered/Properties/Settings.settings
@@ -80,5 +80,8 @@
     <Setting Name="MaxIdleProcessCount" Type="System.Byte" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="Games" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
