--- a/SourceCode/CardIdleRemastered/CardIdleRemastered.csproj
+++ b/SourceCode/CardIdleRemastered/CardIdleRemastered.csproj
@@ -93,6 +93,7 @@
     <Compile Include="AccountUpdater.cs" />
     <Compile Include="Badges\BadgeStockModel.cs" />
     <Compile Include="Converters\BooleanToLengthConverter.cs" />
+    <Compile Include="Converters\EnumValuesConverter.cs" />
     <Compile Include="Info\ProfileInfo.cs" />
     <Compile Include="PricesUpdater.cs" />
     <Compile Include="ViewModels\PaletteItemsCollection.cs" />
