improved game selection for Time Idle mode

--- a/SourceCode/CardIdleRemastered/CardIdleRemastered.csproj
+++ b/SourceCode/CardIdleRemastered/CardIdleRemastered.csproj
@@ -93,6 +93,7 @@
     <Compile Include="AccountUpdater.cs" />
     <Compile Include="AppConstants.cs" />
     <Compile Include="Badges\BadgeStockModel.cs" />
+    <Compile Include="Badges\GameIdentity.cs" />
     <Compile Include="Converters\BooleanToLengthConverter.cs" />
     <Compile Include="Converters\EnumValuesConverter.cs" />
     <Compile Include="Info\ProfileInfo.cs" />
@@ -130,9 +131,6 @@
     <Compile Include="Enums.cs" />
     <Compile Include="Views\CardIdlePage.xaml.cs">
       <DependentUpon>CardIdlePage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\GameSelectionWindow.xaml.cs">
-      <DependentUpon>GameSelectionWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="IdleManager.cs" />
     <Compile Include="IdleProcess.cs" />
@@ -191,10 +189,6 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Views\CardIdlePage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\GameSelectionWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
