--- a/SourceCode/CardIdleRemastered/packages.config
+++ b/SourceCode/CardIdleRemastered/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Extended.Wpf.Toolkit" version="2.7" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
 </packages>
